@@ -1,3 +1,13 @@
+Fri Oct  5 18:44:45 CEST 2018
+	MHD_add_response_header() now prevents applications from
+	setting a "Transfer-Encoding" header to values other than
+	"identity" or "chunked" as other transfer encodings are
+	not supported by MHD. (Note that usually MHD will pick the
+	transfer encoding correctly automatically, but applications
+	can use the header to force a particular behavior.)
+	Fixing #5411 (never set Content-length if Transfer-Encoding
+	is given). -CG
+
 Sat Jul 14 11:42:15 CEST 2018
 	Add MHD_OPTION_GNUTLS_PSK_CRED_HANDLER to allow use of PSK with
 	TLS connections. -CG/TM
